<resources>
    <string name="app_name">疆泰户外救援</string>
    <string name="main_home">JIANGTAI</string>
    <string name="main_sport_record">运动</string>
    <string name="main_setting">手表设置</string>
    <string name="main_connect">设备连接</string>
    <string name="average_speed_allocation">平均配速</string>
    <string name="best_speed_allocation">最佳配速</string>
    <string name="heat_quantity">热量</string>
    <string name="distance_unit">公里</string>
    <string name="sport_time">运动时长：</string>
    <string name="step_num">步数</string>
    <string name="speed_heart_av">平均心率</string>
    <string name="speed_walk_av">平均步频</string>
    <string name="allocation_speed">配速</string>
    <string name="speed_heart">心率</string>
    <string name="speed_walk">步频</string>
    <string name="unit_calorie">千卡</string>
    <string name="step_stride">步频</string>
    <string name="allocation_speed_note">D公里\t累计用时 T</string>
    <string name="heart_rate_range">心率区间</string>
    <string name="dialog_transpond">转发至</string>
    <string name="net_connect_error">网络连接异常</string>
    <string name="app_installed_error_qq">QQ应用未安装！</string>
    <string name="app_installed_error_wx">微信应用未安装！</string>
    <string name="OK">OK</string>
    <string name="action_share">分享</string>
    <string name="progress_update_content">运动数据已更新 @</string>
    <string name="progress_parser_content">数据已解析 @</string>
    <string name="sport_duration">时长</string>
    <string name="sport_calorie">热量</string>

    <!-- validation -->
    <string name="default_required_validation_message">不能为空</string>
    <string name="default_required_length_message_min_max">长度必须在 %1$d 和 %2$d 之间.</string>
    <string name="default_required_length_message_min">长度不能低于 %1$d.</string>
    <string name="default_required_length_message_max">长度不能超过 %1$d.</string>
    <string name="default_regex_validation_message">输入格式不正确.</string>
    <string name="confirm_password_error">两次密码输入不一致</string>
    <string name="login">登录</string>
    <string name="new_register">新用户注册</string>
    <string name="third_login">社交账号登录</string>
    <string name="jt_agreement_private">疆泰户外隐私政策</string>
    <string name="agreement"> \u3000 欢迎使用疆泰户外  \n 我们非常重视您的个人信息和隐私保护.在您使用"疆泰户外"服务之前,请仔细阅读《疆泰户外用户隐私政策》,我们将严格按照经您同意的各项条款使用您的个人信息,以便为您提供更好的服务。 \n\u3000 如果您同意此政策,请点击下方按钮并开始使用我们的产品和服务,我们会尽全力保护您的个人信息安全</string>
    <string name="i_read">我已阅读</string>
    <string name="register_account">注册账号</string>
    <string name="set_info_tip">请认真填写个人资料\n这有助于数据更准确</string>
    <string name="select_date">选择你的出生年月</string>
    <string name="user_agreement">本协议是您（下称“用户”）与北京太极疆泰科技发展有限公司（下称“太极疆泰”）之间签订的协议。\n

一、【重要须知】\n
1.1 用户（未成年人应当在监护人陪同下）欲下载安装疆泰户外APP软件，必须事先认真阅读、充分理解本《“疆泰户外救援APP软件”使用协议及隐私政策》（下称“本协议”）中各条款，包括免除或者限制太极疆泰责任的免责条款及对用户权利限制的条款。如用户不同意本服务条款，请不要使用或主动取消疆泰户外APP软件提供的服务。用户的使用行为将被视为用户对本服务条款全部的完全接受。\n

1.2 在用户接受本协议之后，此文本可能因国家政策、产品以及履行本协议的环境发生变化而进行修改，修改后的协议发布在太极疆泰官方网站上或包含在APP更新版本中，有效代替原来的服务条款。若用户对修改后的协议有异议的，请立即停止访问和使用疆泰户外APP软件，用户继续访问或使用的行为，视为对修改后的协议予以认可。\n

1.3 用户使用疆泰户外救援APP软件服务，须自行配备上网和使用电信增值业务所需的设备，同时本APP账户通过第三方认证，用户自行安装第三方认证软件，如：QQ、微信或微博等，自行负担个人上网或第三方（包括但不限于电信、移动通信提供商）收取的通讯费、信息费等有关费用。\n

1.4 疆泰户外救援APP软件向用户提供丰富的互联网信息服务以及与疆泰品牌交互数据统计与应用，如果某一特定服务有单独的服务条款、规则、指引，用户须遵守该单独的服务条款、规则和指引，用户在接受单独的服务条款、规则、指引的同时，应遵守本协议。\n

二、【关于疆泰户外救援APP软件】\n
2.1 疆泰户外救援APP软件是一款与疆泰品牌交互型通讯和数据应用软件，支持单人、多人参与，在发送地图位置共享图片和文字等即时通讯服务的基础上，同时为用户提供包括但不限于关系链拓展、便捷工具等功能或内容的软件许可及服务。\n

2.2 用户使用本服务需要下载疆泰户外救援APP软件客户端软件，对于这些软件，太极疆泰给予用户一项个人的、不可转让及非排他性的许可。用户仅可为非商业目的而访问或使用这些软件及服务。\n

2.3 疆泰户外救援APP软件客户端软件提供Android应用版本，用户需要选择与所安装手机相匹配的软件版本，才能正常使用。\n

2.4 用户可以直接从太极疆泰的网站上获取本软件，也可以从得到太极疆泰授权的第三方获取。 如果用户从未经太极疆泰授权的第三方获取本软件或与本软件名称相同的安装程序，太极疆泰无法保证该软件能够正常使用，并对因此给用户造成的损失不予负责。\n

2.5 用户使用疆泰户外救援APP软件服务，即表示用户愿意接受疆泰户外救援APP软件服务可能发出的相关邮件或系统消息。\n

2.6 疆泰户外救援APP软件提供的服务中可能包含信息推送，用户同意在使用过程中显示前述信息。但对于前述广告、网站或资源是否可以利用以及利用的后果，太极疆泰不予担保。用户因使用或依赖上述网站或资源所产生的损失或损害，太极疆泰也不承担任何责任。\n

2.7 为了向用户提供更便捷、优质的服务，疆泰户外救援APP软件会将用户的手机注册信息上传到服务器中，并根据注册信息内容向用户推送好友推荐信息。用户知悉并授权疆泰户外救援APP软件进行前述的上传、推送行为。\n

2.8 业务发展需要或第三方原因，太极疆泰保留在任何时候不经任何通知的情况下变更、暂停、限制、终止或撤销疆泰户外救援APP软件部分或全部服务的权利。\n

2.9 本协议其他条款未明示授权的其他一切权利仍由太极疆泰保留，用户在行使这些权利时须另外取得太极疆泰的书面许可。太极疆泰如果未行使前述任何权利，不构成对该权利的放弃。\n

三、【用户使用条款】\n
3.1 用户在使用本服务前需要注册一个QQ、微信或微博第三方账号，疆泰户外APP软件账号通过第三方验证方式注册。太极疆泰有权根据用户需求或产品需要对账号注册方式进行变更。\n

3.2 疆泰户外救援APP软件账号的所有权归太极疆泰公司所有，用户完成申请注册手续后，仅获得疆泰户外救援APP软件账号的使用权，且该使用权仅属于初始申请注册人。同时，初始申请注册人不得赠与、借用、租用、转让或售卖疆泰户外救援APP软件账号或者以其他方式许可非初始申请注册人使用疆泰户外救援APP软件账号。非初始申请注册人不得通过受赠、继承、承租、受让或者其他任何方式使用疆泰户外救援APP软件账号。\n

3.3 用户充分了解并同意，须对在疆泰户外救援APP软件上填写的注册信息、身份资料信息的真实性、合法性、有效性承担全部责任，用户不得冒充他人、不得利用他人的名义传播任何信息；否则太极疆泰有权立即停止提供服务，收回疆泰户外救援APP软件账号并由用户独自承担由此而产生的一切法律责任。\n

3.4 用户有责任妥善保管注册帐户信息及帐户密码的安全，用户需要对注册帐户以及密码下的行为承担法律责任。用户同意在任何情况下不向他人透露帐户及密码信息。在用户怀疑他人在使用用户的账号时，用户应立即更新登录帐户密码。\n

3.5 用户注册疆泰户外救援APP软件账号后如果长期不登录该账号，太极疆泰有权回收该账号，由此带来的任何损失均由用户自行承担。\n

3.6 用户不得利用本服务制作、复制、发布、传播、存储含有下列内容的信息： 1）反对宪法所确定的基本原则的； 2）危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的； 3）损害国家荣誉和利益的； 4）煽动民族仇恨、民族歧视，破坏民族团结的； 5）破坏国家宗教政策，宣扬邪教和封建迷信的； 6）散布谣言，扰乱社会秩序，破坏社会稳定的； 7）散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的； 8）侮辱或者诽谤他人，侵害他人合法权益的； 9）含有法律、行政法规禁止的其他内容的。\n

3.7 用户未经太极疆泰事先书面同意，不得利用疆泰户外救援APP软件服务进行任何诸如发布广告、销售商品、进行调查的商业行为，或者进行任何非法的侵害太极疆泰利益的行为。\n

3.8 用户不得利用本软件发布、传播违法信息、虚假信息，损害任何第三方的名誉权、隐私权、肖像权、知识产权等合法权益的信息，或者发布垃圾信息，广告信息，骚扰信息。\n

3.9 用户在疆泰户外救援APP软件服务中或通过疆泰户外救援APP软件服务所传送的任何内容并不反映太极疆泰的观点或政策，用户须对在疆泰户外救援APP软件上传、分享信息的真实性、合法性、无害性、有效性等承担全部责任。与用户所传播信息相关的任何法律责任由用户自行承担，与太极疆泰无关。\n

3.10 用户应对其他用户发布的内容自行加以判断，并承担因使用该内容而引起的所有风险，包括因对内容的真实性、正确性、完整性、实用性及适商性的依赖而产生的风险。太极疆泰无法且不会对因用户行为而导致的任何损失或损害承担责任。\n

3.11 用户不得对疆泰户外救援APP软件或者该软件运行过程中释放到任何终端中的数据及该软件运行过程中客户端与服务器端的交互数据进行复制、更改、修改、挂接运行或创作任何衍生作品，形式包括但不限于通过非太极疆泰开发、授权或认可的三方兼容软件、插件、外挂，登录或使用疆泰户外救援APP软件及服务。\n

3.12 除非太极疆泰同意，用户不可对本服务任何部分的任何信息进行复制、拷贝、出售。用户不得使用任何手段删除、修改本软件展示的信息，不得对疆泰户外救援APP软件进行反向工程、反向汇编、反向编译等。\n

3.13 用户不得通过修改或伪造软件作品运行中的指令、数据、数据包，增加、删减、变动软件的功能或运行效果，不得将用于上述用途的软件通过信息网络向公众传播或者运营。\n

3.14 用户不得进行任何危害计算机网络安全的行为，包括但不限于：使用未经许可的数据或进入未经许可的服务器/账号；未经允许进入公众计算机网络或者他人计算机系统并删除、修改、增加存储信息；未经许可，企图探查、扫描、测试本“软件”系统或网络的弱点或其它实施破坏网络安全的行为；企图干涉、破坏本软件系统或网站的正常运行，故意传播恶意程序或病毒以及其他破坏干扰正常网络信息服务的行为；伪造TCP/IP数据包名称或部分名称。\n

3.15 用户未经太极疆泰许可，不得将疆泰户外救援APP软件安装在未经明示许可的其他终端设备上。包括但不限于机顶盒、手持设备、电话、无线上网机、游戏机、电视机等。\n

3.16 用户不得以任何不合法的方式、为任何不合法的目的、或以任何与本协议不一致的方式使用本软件和提供的其他服务。\n

3.17 用户应遵守本协议的各项条款，正确、适当地使用本服务，如因用户违反本协议中的任何条款，太极疆泰有权终止对违约用户提供服务。同时，太极疆泰保留在任何时候收回疆泰户外救援APP软件账号的权利。\n

四、【收费服务】\n
4.1 本APP软件目前免费向疆泰品牌用户开放使用。\n

4.2 若用户向他人透漏账户信息，或因用户账户保管不善导致泄露账户信息导致用户账户内的预存款、道具等财物丢失的，由用户自行承担责任，疆泰户外APP软件不对此承担任何责任。\n

五、【疆泰户外救援APP软件声明】\n
5.1 太极疆泰有权对用户使用疆泰户外救援APP软件的情况进行监督，如经由通知、举报等途径发现用户有在使用疆泰户外救援APP软件提供的网络服务时违反任何本协议规定的嫌疑，太极疆泰可依其合理判断，对违反有关法律法规或本协议约定，或侵犯、妨害、威胁任何人权利或安全的内容，或者假冒他人的行为，太极疆泰有权依法停止传输任何前述内容，并有权依其自行判断对违反本条款的任何人士采取适当的法律行动，包括但不限于，从疆泰户外救援APP软件服务中过滤、屏蔽、删除具有违法性、侵权性、不当性等内容，终止违反者的成员资格，阻止其使用疆泰户外救援APP软件全部或部分服务，并且依据法律法规保存有关信息并向有关部门报告等。\n

5.2 用户使用疆泰户外救援APP软件服务必须遵守国家有关法律和政策，维护国家利益，保护国家安全，并遵守本条款，对于用户违法或违反本协议的使用而引起的一切责任，由用户承担全部责任。\n

5.3 疆泰户外救援APP软件服务同大多数互联网产品一样，易受到各种安全问题的困扰，包括但不限于：1）用户透露详细个人资料，被不法分子利用，造成现实生活中的骚扰。 2）被哄骗、破译密码。 3）下载安装的其它软件中含有木马或病毒，威胁到个人终端机器上的信息和数据安全，继而威胁对本服务的使用。 对于发生上述情况的，用户应当自行承担责任。\n

5.4 用户理解，互联网技术的不稳定性，可能导致政府政策管制、病毒入侵、黑客攻击、服务器系统崩溃或者其他现今技术无法解决的风险发生，可能导致太极疆泰服务中断或账号道具损失，用户对此非人为因素引起的损失，太极疆泰不承担责任。\n

5.5 对于系统发生故障影响到本服务的正常运行，疆泰户外APP软件承诺一经发现便及时处理、进行修复。但用户因此而产生的经济和精神损失，太极疆泰不承担责任。\n

六、【知识产权】\n
6.1 太极疆泰是本软件的知识产权权利人。本软件的著作权、商标权、专利权、商业秘密等知识产权，以及与本软件相关的信息内容（包括但不限于文字、图片、音频、视频、图表、界面设计、版面框架、有关数据或电子文档等）均受中华人民共和国法律法规和相应的国际条约保护，太极疆泰享有上述知识产权，但其他相关权利人依照法律规定应享有的权利除外。\n

6.2 本软件使用了第三方软件或技术，详见附录列表，这种使用已经获得合法授权或免费开放使用。太极疆泰按照相关法规或约定，对相关的协议或其他文件。前述的相关协议或其他文件，均是本协议不可分割的组成部分，与本协议具有同等的法律效力，用户应当遵守这些要求。如果用户没有遵守这些要求，该第三方或者国家机关可能会对用户提起诉讼、罚款或采取其他制裁措施，并要求太极疆泰给予协助，用户应当自行承担法律责任。\n

6.3 如因本软件使用的第三方软件或技术引发的任何纠纷，应由该第三方负责解决，太极疆泰不承担任何责任。太极疆泰不对第三方软件或技术提供客服支持，若用户需要获取支持，请与相应第三方软件服务商联系。\n

6.4 用户使用疆泰户外救援APP软件服务，只能在本协议以及相应的授权许可协议范围使用太极疆泰的知识产权，未经授权超越范围使用的将构成对太极疆泰的侵权。\n

6.5 用户在使用疆泰户外救援APP软件服务时发布上传的文字、图片等用户原创的信息，此部分信息的知识产权归用户，但用户的发表、上传行为是对太极疆泰的授权，用户确认其发表、上传的信息非独占性、永久性的授权，该授权可转授权。疆泰户外救援APP软件可将前述信息在太极疆泰旗下的服务平台上使用、再次编辑后使用，也可以由疆泰户外救援APP软件授权给合作方使用。\n

6.6 若疆泰户外救援APP软件的信息以及其他用户上传、分享的信息有侵犯用户或第三人的知识产权或其他权利的，用户可通过投诉通道反馈意见。\n

6.7 若用户认为自己的著作权/信息网络传播权被侵犯，请向太极疆泰发出权利通知书。太极疆泰将根据中国法律法规和政府规范性文件采取措施删除被控作品内容或断开与被控作品的链接。\n

6.8 太极疆泰根据前述原因删除相关内容的，被删除内容的提供者可以向太极疆泰发出关于被删除内容不侵犯知识产权/合法权益的反通知。反通知发出后，太极疆泰可以恢复被删除的内容或链接，且依法对该恢复行为不承担法律责任。\n

七、【其他条款】\n
7.1 本协议条款的签订、解释以及争议的解决均适用中华人民共和国法律。\n

7.2 本协议的签署地点为北京市海淀区，若用户与太极疆泰发生法律争议的，双方同意将争议提交北京仲裁委员会仲裁，在北京依据仲裁规则解决。\n

7.3 本协议在安装疆泰户外APP软件的页面或太极疆泰网页上展示，对用户和太极疆泰具有法律约束力，用户在安装界面或网页上接受本协议，对用户具有法律约束力。\n

附录列表：\n

序号   第三方软件或技术名称   授权或免费开放公司\n

1        高德地图                        阿里巴巴\n

2        友盟登陆与分享                  友盟\n

3        聚合数据                        新科兰德\n

4        ShareSDK                          掌淘网络科技\n

5        QQ                                 腾讯科技\n

6        微信                               腾讯科技\n

7        新浪微博                        新浪\n

八、【隐私保护】\n
太极疆泰极其注重你的隐私，我们制订本隐私声明，旨在让你了解我们收集、使用、披露、转让和存储你的信息的方式。请通读本隐私声明，熟悉我们的隐私保护政策。\n

本隐私声明说明太极疆泰在发布本隐私声明的网站上或我们的某些产品和应用程序中收集的信息的处理方式，某些附属公司或经销商网站可能受不同下列保护隐私条款保护约束，我们鼓励你阅读你所访问的每个网站的隐私声明。此外，我们会为某些产品和应用程序的用户提供特定于那些产品的补充隐私声明，请与本隐私声明一起阅读。你有任何有关隐私方面问题，请及时向我司业务或客服人员邮件咨询投诉。\n

8.1 保护用户个人信息是太极疆泰的一项基本原则。疆泰户外救援APP软件将采取合理的措施保护用户的个人信息，包括但不限于采用专业加密存储与传输方式，保障用户个人信息的安全。除法律法规规定的情形外，疆泰户外救援APP软件未经用户许可不会向第三方公开、透露用户的个人信息。\n

8.2 用户在注册帐号或使用本服务的过程中，可能需要提供一些必要的信息，例如：为向用户提供帐号注册服务或进行用户身份识别，需要用户填写手机号码或邮箱帐号等信息；手机通讯录匹配功能需要用户授权访问手机通讯录等，同时，用户在论坛上发布或向服务器上传注册数据和共享运动数据等，可能会用于用户数据和运动类型的分类匿名统计、产品研发分析改善、客户售后和新产品的定向推送用途，用户上传的活动精品地图轨迹数据，会分类汇总用于同类需求用户分享查询使用。若国家法律法规或政策有特殊规定的，用户需要提供真实的身份信息。若用户提供的信息不完整，则无法使用本服务或在使用过程中受到限制。\n

8.3 疆泰户外救援APP软件提醒用户注意，切勿在疆泰户外救援APP软件服务个人信息中透露自己的各类财产账户、银行卡、信用卡、第三方支付账户及对应密码等重要资料，否则由此带来的任何损失由用户自行承担。\n

8.4 用户在使用疆泰户外救援APP软件服务时不可将自认为隐私的信息发表、上传至疆泰户外APP软件及网站，也不可将该等信息通过疆泰户外APP软件的服务传播给其他人，若用户的行为引起的隐私泄漏，由用户承担责任。\n

8.5 就下列相关事宜的发生，疆泰户外救援APP软件不承担任何法律责任：\n

8.5.1 太极疆泰根据法律规定或相关政府、司法机关的要求提供用户的个人信息；\n

8.5.2 由于用户将安装救援APP产品的终端（如：手机）转借他人或用户密码告知他人或与他人共享注册账户，由此导致的任何个人信息的泄漏，或其他非因太极疆泰原因导致的个人信息的泄漏；\n

8.5.3 任何由于用户产品终端遭受黑客攻击、病毒侵入造成的信息泄漏；\n

8.5.4 因不可抗力导致的信息泄漏。\n

北京太极疆泰科技发展有限公司\n
</string>

    <string name="accessToken">pk.eyJ1IjoieHRxYiIsImEiOiJja2p2YmxodHIwNnczMm9sc2FreWo1Y3czIn0.a5nkAYRZy755-vSLgGhAIA</string>
</resources>
