<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="74dp">

    <ImageView
        android:id="@+id/im_portrait"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginLeft="15dp"
        android:src="@mipmap/icon_hiking_sport"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_duration_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="5dp"
        android:text="@string/sport_duration"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toRightOf="@+id/im_portrait"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="12:58"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toRightOf="@+id/tv_duration_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_calorie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="3dp"
        android:text="@string/sport_calorie"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toRightOf="@+id/im_portrait"
        app:layout_constraintTop_toBottomOf="@id/tv_duration" />

    <TextView
        android:id="@+id/tv_calorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:gravity="center_vertical"
        android:text="12:58"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toRightOf="@+id/tv_calorie_title"
        app:layout_constraintTop_toTopOf="@+id/tv_calorie_title" />

    <TextView
        android:id="@+id/tv_allocation_speed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="3dp"
        android:text="@string/allocation_speed"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toRightOf="@+id/tv_duration"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_allocation_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="12:58"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toRightOf="@+id/tv_allocation_speed_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_steps_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:text="@string/step_num"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toRightOf="@+id/tv_duration"
        app:layout_constraintTop_toTopOf="@+id/tv_calorie_title" />

    <TextView
        android:id="@+id/tv_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:gravity="center_vertical"
        android:text="12:58"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toRightOf="@+id/tv_steps_title"
        app:layout_constraintTop_toTopOf="@+id/tv_calorie_title" />

    <View
        android:id="@+id/splite"
        android:layout_width="@dimen/dp_1"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/dp_70"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_steps_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_distance"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:text="909m"
        android:textColor="@color/gray"
        android:textSize="@dimen/dp_24"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/splite"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:text="日期"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toRightOf="@+id/im_portrait"
        app:layout_constraintTop_toTopOf="@+id/tv_ymt" />

    <TextView
        android:id="@+id/tv_ymt"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical"
        android:text="2019-12-28"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_14"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="@+id/tv_calorie"
        app:layout_constraintTop_toBottomOf="@+id/tv_calorie_title" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:text="12:58"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_ymt"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        style="@style/horizontalsplite"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>